# pg_auto_dw

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pg_auto_dw.control
.github/workflows/: extension_release.yml
docs/: readme.md
docs/sql_functions/: go.md  health.md  readme.md  source_columns.md  source_exclude.md  source_include.md  source_tables.md  update_context.md
docs/vision_plus_script/: readme.md
extension/: Cargo.toml  Trunk.toml  pg_auto_dw.control
extension/docs/: readme.md
extension/docs/sql_functions/: go.md  source_include.md
extension/sql/: info_tables.sql  source_objects.sql
extension/src/: bgworker.rs  lib.rs  ollama_client.rs  queries.rs  setup.rs
extension/src/controller/: bgw_init.rs  bgw_source_objects.rs  bgw_transformer_client.rs  bgworker.rs  dv_builder.rs  dv_loader.rs  init_bgw.rs  mod.rs
extension/src/model/: dv_schema.rs  dv_transformer_schema  dv_transformer_schema.rs  mod.rs  prompt_template.rs  queries.rs  source_objects.rs
extension/src/service/: mod.rs  ollama_client.rs
extension/src/utility/: guc.rs  mod.rs  ollama_client.rs  openai_client.rs  setup.rs  transformer_client.rs
extension/src/utility/sql/: info_tables.sql
extension/src/utility/sql/sample_source_tables/: seller.sql
sql/: extensions.sql  raise_notice.sql  sample_source_tables.sql
src/: lib.rs  queries.rs  setup.rs
